--- a/haproxy/Dockerfile-plain
+++ b/haproxy/Dockerfile-plain
@@ -1,6 +1,6 @@
 FROM ubuntu
 
-RUN apt-get update -qq  && apt-get -y upgrade && apt-get install -y unzip lighttpd openssl libssl-dev wget build-essential rsyslog
+RUN apt-get update -qq  && apt-get -y upgrade && apt-get install -y unzip lighttpd openssl libssl-dev wget build-essential rsyslog curl telnet
 
 # build haproxy
 WORKDIR /root
