--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -16,8 +16,8 @@ defaults
     maxconn 3000
 
 frontend my.ha.proxy
-    bind 127.0.0.1:80
-    bind 127.0.0.1:443 ssl crt /opt/haproxy/certkey.pem
+    bind :80
+    bind :443 ssl crt /opt/haproxy/certkey.pem
     http-request redirect scheme https unless { ssl_fc }
     default_backend web_servers
 
