--- a/haproxy/alpine/haproxy.cfg
+++ b/haproxy/alpine/haproxy.cfg
@@ -16,7 +16,7 @@ defaults
 
 frontend my.ha.proxy
     bind :8080
-    bind :443 ssl crt /opt/haproxy/certkey.pem
+    bind :443 ssl crt /opt/haproxy/certkey.pem curves kyber512
     http-request redirect scheme https unless { ssl_fc }
     default_backend web_servers
 
