--- a/haproxy/non-oqs/Dockerfile
+++ b/haproxy/non-oqs/Dockerfile
@@ -6,21 +6,10 @@ RUN apt-get update -qq  && apt-get -y upgrade && apt-get install -y unzip lightt
 WORKDIR /root
 RUN wget https://github.com/haproxy/haproxy/archive/master.zip && unzip master.zip 
 
-#RUN cd /root/haproxy-master && make SSL_INC=/opt/oqssa/include SSL_LIB=/opt/oqssa/lib TARGET=linux-glibc USE_OPENSSL=1 && make install
 RUN cd /root/haproxy-master && make TARGET=linux-glibc USE_OPENSSL=1 && make install
 
 WORKDIR /opt/haproxy
-COPY startup-plain.sh /opt/haproxy/startup.sh
+COPY startup.sh /opt/haproxy/startup.sh
 COPY haproxy.cfg /opt/haproxy/haproxy.cfg
 
-#
-## forward request and error logs to docker log collector
-#RUN ln -sf /dev/stdout /opt/httpd/logs/access_log && \
-#    ln -sf /dev/stderr /opt/httpd/logs/error_log;
-#
-#EXPOSE 4433
-#
-#STOPSIGNAL SIGTERM
-
-#CMD ["/opt/httpd/bin/httpd", "-DFOREGROUND"]
 ENTRYPOINT ["/opt/haproxy/startup.sh"]
