--- a/haproxy/alpine/Dockerfile-run
+++ b/haproxy/alpine/Dockerfile-run
@@ -9,5 +9,7 @@ RUN apk update && apk upgrade && apk add lighttpd && rm -rf /var/cache/apk/*
 ADD opt /opt
 ADD startup.sh /opt/haproxy/startup.sh
 ADD haproxy.cfg /opt/haproxy/haproxy.cfg
+RUN echo "export PATH=/opt/oqssa/bin:$PATH" >> /etc/profile
+ENV ENV="/etc/profile"
 
 CMD ["/bin/sh"]
