cert check disablement in local proxy

--- a/haproxy/alpine/haproxy-appliance.cfg
+++ b/haproxy/alpine/haproxy-appliance.cfg
@@ -20,4 +20,4 @@ backend qsc_servers
     cookie SERVERUSED insert indirect nocache
     option httpchk HEAD /
     default-server check maxconn 20
-    server server1 my.ha.proxy:4443 ssl ca-file CA.crt 
+    server server1 my.ha.proxy:4443 ssl ca-file CA.crt verify required
