documentation and scripts brought in line

--- a/haproxy/Dockerfile
+++ b/haproxy/Dockerfile
@@ -6,21 +6,23 @@ COPY build-liboqs-openssl-curl-haproxy.sh /root/build-liboqs-openssl-curl-haprox
 
 RUN /root/build-liboqs-openssl-curl-haproxy.sh
 
-COPY haproxy.cfg /opt/haproxy/haproxy.cfg
-COPY upload.cgi /usr/lib/cgi-bin/upload.cgi
-
 FROM ubuntu:19.10
 
 RUN apt-get update -qq && apt-get upgrade -y && apt-get dist-upgrade -y  && apt install -y lighttpd
 
+# Only obtain installed/binary artifacts:
+COPY --from=intermediate /opt /opt
 
+# Prepare lighttpd config
+COPY upload.cgi /usr/lib/cgi-bin/upload.cgi
 ADD lighttpd.conf /etc/lighttpd/lighttpd.conf
 RUN echo "Hello World from lighttpd backend. If you see this, all is fine: lighttpd data served via haproxy protected by OQSSL..." > /var/www/html/index.html
 
-COPY --from=intermediate /opt /opt
+# Prepare server-side components
+COPY startup.sh /opt/haproxy/startup.sh
+COPY haproxy.cfg /opt/haproxy/haproxy.cfg
 
-COPY startup-appliance.sh /opt/haproxy/startup.sh
-COPY haproxy-appliance.cfg /opt/haproxy/haproxy.cfg
+# Remove need for running as root
 RUN useradd -ms /bin/bash oqs && chown -R oqs.oqs /opt/haproxy && lighttpd-enable-mod cgi 
 USER oqs
 WORKDIR /opt/haproxy
