--- a/haproxy/alpine/haproxy-client.cfg
+++ b/haproxy/alpine/haproxy-client.cfg
@@ -18,6 +18,7 @@ frontend localhost
 backend qsc_servers
     balance roundrobin
     cookie SERVERUSED insert indirect nocache
-    option httpchk HEAD /
+    #option ssl-hello-chk
     default-server check maxconn 20
-    server server1 my.ha.proxy:4443 ssl ca-file CA.crt verify required
+    server server1 my.ha.proxy:4443 ssl ca-file CA.crt verify required check-ssl
+
