--- a/haproxy/alpine/lighttpd.conf
+++ b/haproxy/alpine/lighttpd.conf
@@ -16,7 +16,7 @@ var.statedir = "/opt/haproxy"
 server.modules = (
 #    "mod_rewrite",
 #    "mod_redirect",
-#    "mod_alias",
+    "mod_alias",
     "mod_access",
 #    "mod_cml",
 #    "mod_trigger_b4_dl",
@@ -41,7 +41,7 @@ server.modules = (
 # {{{ includes
 include "mime-types.conf"
 # uncomment for cgi support
-#   include "mod_cgi.conf"
+include "mod_cgi.conf"
 # uncomment for php/fastcgi support
 #   include "mod_fastcgi.conf"
 # uncomment for php/fastcgi fpm support
