--- a/haproxy/alpine/haproxy-server.cfg
+++ b/haproxy/alpine/haproxy-server.cfg
@@ -11,7 +11,6 @@ defaults
     timeout server 30s
     log global
     mode http
-    option httplog
     maxconn 3000
 
 frontend my.ha.proxy
@@ -23,6 +22,6 @@ frontend my.ha.proxy
 backend web_servers
     balance roundrobin
     cookie SERVERUSED insert indirect nocache
-    option httpchk HEAD /
+    #option httpchk HEAD /
     default-server check maxconn 20
     server server1 127.0.0.1:8282 cookie server1
