--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,18 +19,18 @@ localCheckout: &localCheckout
     - run:
         name: docker login
         command: echo $DOCKER_PASSWORD | docker login --username $DOCKER_LOGIN --password-stdin
-#    - run:
-#        name: Curl
-#        command: .circleci/git_no_checkin_in_last_day.sh || (cd curl && docker build -t oqs-curl . && docker run -e TEST_TIME=5 -e KEM_ALG=sikep751 -e SIG_ALG=picnicl1fs -it oqs-curl perftest.sh)
-#    - run: 
-#        name: Apache httpd
-#        command: .circleci/git_no_checkin_in_last_day.sh || (cd httpd && docker build -t oqs-httpd-img . && docker run --detach --rm --name oqs-httpd oqs-httpd-img && sleep 2 && docker exec oqs-httpd bash -c 'echo  "GET /" | /opt/openssl/bin/openssl s_client -CAfile CA.crt -curves frodo640aes -crlf -connect localhost:4433')
+    - run:
+        name: Curl
+        command: .circleci/git_no_checkin_in_last_day.sh || (cd curl && docker build -t oqs-curl . && docker run -e TEST_TIME=5 -e KEM_ALG=sikep751 -e SIG_ALG=picnicl1fs -it oqs-curl perftest.sh)
+    - run: 
+        name: Apache httpd
+        command: .circleci/git_no_checkin_in_last_day.sh || (cd httpd && docker build -t oqs-httpd-img . && docker run --detach --rm --name oqs-httpd oqs-httpd-img && sleep 2 && docker exec oqs-httpd bash -c 'echo  "GET /" | /opt/openssl/bin/openssl s_client -CAfile CA.crt -curves frodo640aes -crlf -connect localhost:4433')
     - run: 
         name: nginx
         command: .circleci/git_no_checkin_in_last_day.sh || (cd nginx && docker build -t oqs-nginx-img . && docker run --detach --rm --name oqs-nginx oqs-nginx-img && sleep 2 && docker exec oqs-nginx /opt/openssl/apps/openssl s_client -CAfile CA.crt -curves kyber512 -connect localhost:4433)
     - run:
         name: Push images
-        command: docker tag oqs-nginx openqsafe/nginx-generic && docker push openqsafe/nginx-generic
+        command: docker tag oqs-curl openqsafe/oqs-curl-generic && docker push openqsafe/oqs-curl-generic && docker tag oqs-httpd-img openqsafe/httpd-generic && docker push openqsafe/httpd-generic && docker tag oqs-nginx-img openqsafe/nginx-generic && docker push openqsafe/nginx-generic
 
 
 .mac_job: &macjob
@@ -42,9 +42,6 @@ localCheckout: &localCheckout
             name: Scan env
             command: env
         - run:
-            name: docker login
-            command: echo $DOCKER_PASSWORD | docker login --username $DOCKER_LOGIN --password-stdin
-        - run:
             name: Install dependencies
             command: |
               .circleci/git_no_checkin_in_last_day.sh || (
@@ -53,8 +50,8 @@ localCheckout: &localCheckout
               brew install docker
               )
         - run:
-            name: Look around
-            command: docker ; docker version
+            name: docker login
+            command: echo $DOCKER_PASSWORD | docker login --username $DOCKER_LOGIN --password-stdin
         - run:
             name: Curl
             command: .circleci/git_no_checkin_in_last_day.sh || (cd curl && docker build -t oqs-curl . && docker run -e TEST_TIME=5 -e KEM_ALG=sikep751 -e SIG_ALG=picnicl1fs -it oqs-curl perftest.sh)
